--- a/vidj.less
+++ b/vidj.less
@@ -16,8 +16,6 @@
 
 
 
-
-
 @media (min-width: 1200px) {
   .container {
     max-width: 100%;
@@ -28,6 +26,16 @@ html, body, .container, .page, .currRoom {
     & {
         height: 100%;
     }
+}
+
+.playlist-container {
+    float: right;
+    font-size: 15px;
+    color: white;  
+
+    .addVideoPanel {
+        display: none;
+    }  
 }
 
 .currRoom {
@@ -41,6 +49,7 @@ html, body, .container, .page, .currRoom {
         padding-top: 30px;
         height: 100%;
         overflow: hidden;
+        display: inline;
     }
 
     .video-container iframe,  
@@ -49,7 +58,7 @@ html, body, .container, .page, .currRoom {
         position: absolute;
         top: 0;
         left: 0;
-        width: 80%;
+        width: 100%;
         height: 100%;
     }
 }
@@ -195,6 +204,25 @@ body {
     }
 }
 
+.videoPage {
+    margin-top: 3%;
+    min-height: 310px;
+    height: 100%;
+
+    .roomid {
+        color: white;
+        float: right;
+        margin-top: -10px;
+        margin-bottom: 10px;
+        padding-left: 5px;
+    }
+
+    .future {
+        padding-left: 2px;
+        padding-right: 0px;
+    }
+}
+
 .page {
     padding: 20px 0px;
     margin-top: 6%;
@@ -245,10 +273,17 @@ body {
 
 .create {
     margin-top: 6%;
+    min-height: 250px;
 
     fieldset {
         padding: 20px 10%;
     }
+}
+
+.successMessage {
+    color:white;
+    font-size: 20px;
+    padding-left: 50px;
 }
 
 .brand {
@@ -346,6 +381,10 @@ legend {
     color: #FFFFFF;
     background-color: #BBD982;
     *background-color: #003bb3;
+}
+
+.mode {
+    font-size: 25px;
 }
 
 .plus {
