--- a/vidj.less
+++ b/vidj.less
@@ -14,7 +14,27 @@
     src: url('Lato-Bol.ttf');
 }
 
+*, h1, h2, h3, h4, h5 {
+    font-family: Lato;    
+}
 
+@media (min-width: 992px) {
+ .container {
+    max-width: 100%;
+  }
+}
+
+@media (min-width: 768px) {
+ .container {
+    max-width: 100%;
+  }
+}
+
+@media (min-width: 992px) {
+ .btn-home {
+
+  }
+}
 
 @media (min-width: 1200px) {
   .container {
@@ -32,10 +52,6 @@ html, body, .container, .page, .currRoom {
     float: right;
     font-size: 15px;
     color: white;  
-
-    .addVideoPanel {
-        display: none;
-    }  
 }
 
 .currRoom {
@@ -67,14 +83,6 @@ html, body, .container, .page, .currRoom {
     display: none;
     font-size: 30px; 
     color: white;   
-}
-
-body { 
-  background: url(bg.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
 }
 
 .menuholder {
@@ -126,6 +134,7 @@ body {
 
 .container {
     margin: 0px auto;
+    display: block;
 }
 
 .control-label {
@@ -156,16 +165,67 @@ body {
     color: @blue;
 }
 
+.blue-bg {
+    background-color: @blue;
+    margin: 0px 25px;
+}
+
 .purp {
     color: @purple;
+}
+
+.purp-bg {
+    background-color: @purple;
 }
 
 .green {
     color: @green;
 }
 
-.wide {
-    padding-top: 70px;
+.green-bg {
+    background-color: @green;
+}
+
+.Absolute-Center {
+  width: 80%;
+  height: 80%;
+  overflow: auto;
+  margin: 10%;
+  padding-left: 9%;
+  position: absolute;
+  top: 0; left: 0; bottom: 0; right: 0;
+}
+
+.Absolute-Center.is-Responsive {
+  width: 60%; 
+  height: 60%;
+  min-width: 200px;
+  max-width: 400px;
+  padding: 40px;
+}
+
+.about {
+    background: linear-gradient(to bottom,#e1e1e1 0,#fff 30%,#fff 100%);
+    background: -webkit-linear-gradient(top,#e1e1e1 0,#fff 30%,#fff 100%);
+    background: -webkit-gradient(linear,left top,left bottom,color-stop(0,#e1e1e1),color-stop(0.3,#fff),color-stop(1,#fff));
+    background: -o-linear-gradient(top,#e1e1e1 0,#fff 30%,#fff 100%);
+    background: -moz-linear-gradient(top,#e1e1e1 0,#fff 30%,#fff 100%);
+    background: -ms-linear-gradient(top,#e1e1e1 0,#fff 30%,#fff 100%);
+    padding: 20px 30px;
+    height: 400px;
+}
+
+.homepage {
+    padding-top: 11%;
+    position:relative;
+    padding-bottom: 18%;
+    background: url(bg.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
 
     .home-hero .btn {
         font-family: 'Lato', sans-serif;
@@ -176,7 +236,7 @@ body {
 
     .buttonsHome {
             opacity: .9;
-            padding-top: 20px;
+            padding-top: 35px;
             padding-bottom: 30px;
     }
 
@@ -185,23 +245,32 @@ body {
     }
 
     .large {
-        padding-top: 65px;
-        font-size: 70px;
+        padding-top: 5%;
+        margin-top: 33px;
+        font-size: 90px;
         color: white;
         font-weight: bold;
+    }
+
+    .tag {
+        color:white;
+        margin-top: -10px;
     }
 
     @media only screen and ( max-width : 767px) {
         .large {
             font-size: 51px;
             line-height: 54px;
-            padding-top: 70px;
         }
 
         .buttonsHome {
             padding-top: 15px;
         }
     }
+}
+
+.hidden {
+    display: none;
 }
 
 .videoPage {
@@ -220,59 +289,23 @@ body {
     .future {
         padding-left: 2px;
         padding-right: 0px;
+        cursor: pointer;
     }
 }
 
 .page {
     padding: 20px 0px;
-    margin-top: 6%;
     min-height: 310px;
-
-    .thumbnailsLeft {
-        list-style-type: none;
-        margin:0; 
-        padding: 0; 
-        text-align: center;
-        float: left; 
-        width: 50%;
-    }
-
-    .thumbnailsRight {
-        list-style-type: none;
-        margin:0; 
-        padding: 0; 
-        text-align: center;  
-        float: right;
-        width: 50%;
-    }
-
-    @media only screen and ( max-width : 767px) {
-        .thumbnailsRight {
-            float: none;
-            clear: both;
-            width:100%;
-            padding-top: 1px
-        }
-
-        .thumbnailsLeft {
-            width: 100%;
-        }
-    }
+    position: relative;
 
     .thumbnail {
         margin: 10px 20px 0px 20px;
-        min-width: 260px;
         min-height: 54px;
-
-        li {
-            margin-left: 0px !important;
-            margin-right: 20px !important;
-        }
     }           
 }
 
 .create {
-    margin-top: 6%;
+    margin-top: 14%;
     min-height: 250px;
 
     fieldset {
@@ -286,49 +319,34 @@ body {
     padding-left: 50px;
 }
 
-.brand {
-    font-family:  'Lato', sans-serif;
+
+
+#brand {
+    color: white;
 }
 
 a.plain:link {
-    color: #333;
+    color: white;
     text-decoration: none;
 }
 
 a.plain:active {
-    color: #333;
+    color: white;
     text-decoration: none;
 }
 
 a.plain:visited {
-    color: #333;
+    color: white;
     text-decoration: none;
 }
 
 a.plain:hover {
-    color: #333;
+    color: #7F7F7F;
     text-decoration: none;
 }
 
 .status-bar {
     height: 60px;
-}
-
-.about-icon {
-    float: left;
-    margin-right: 12px;
-}
-
-.footer {
-    margin-top: 30px;
-    padding-top: 10px;
-    color: #999;
-    border-top: solid 1px #ddd;
-
-    p {
-        padding-top: 4px !important;
-        padding-bottom: 4px !important;
-    }
 }
 
 h5 {
@@ -342,45 +360,51 @@ legend {
     color: white;
 }
 
-@media only screen and ( max-width : 480px ) {
-    .home-hero {
-        padding:32px;
-    }
-}
-
-/* Social proof buttons from GitHub & Twitter */
-.bs-docs-social {
-    padding: 15px 0;
-    text-align: center;
-    background-color: #f5f5f5;
-    border-top: 1px solid #fff;
-    border-bottom: 1px solid #ddd;
-}
-
 .btn-home {
-    color: #FFFFFF;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-    background-color: #BBD982;
-    background-color: #BBD982;
-    background-image: -moz-linear-gradient(top, #B6D67A, #BBD982);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#B6D67A), to(#BBD982));
-    background-image: -webkit-linear-gradient(top, #B6D67A, #BBD982);
-    background-image: -o-linear-gradient(top, #B6D67A, #BBD982);
-    background-image: linear-gradient(to bottom, #B6D67A, #BBD982);
-    background-repeat: repeat-x;
-    border-color: #BBD982;
-    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#B6D67A', endColorstr='#BBD982', GradientType=0);
-    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
+    -moz-box-shadow:inset 0px 0px 0px 0px #caefab;
+    -webkit-box-shadow:inset 0px 0px 0px 0px #caefab;
+    box-shadow:inset 0px 0px 0px 0px #caefab;
+    display:inline-block;
+    color: white;
+    font-family:Lato;
+    font-size:34px;
+    font-weight:bold;
+    padding:13px 30px;
+    text-decoration:none;
+    text-shadow:1px 1px 0px darkgray;
+}.btn-home:active {
+    position:relative;
+    top:1px;
 }
-.btn-home:hover,
-.btn-home:active,
-.btn-home.active,
-.btn-home.disabled,
-.btn-home[disabled] {
-    color: #FFFFFF;
-    background-color: #BBD982;
-    *background-color: #003bb3;
+
+@media (max-width: 1086px) {
+ .btn-home {
+    font-size:25px;
+  }
+}
+
+@media (max-width: 870px) {
+ .btn-home {
+    font-size:20px;
+  }
+}
+
+.footer {
+    background-color: #2B2B2B;
+    padding-top: 40px;
+    padding-left: 30px;
+    padding-bottom: 25px;
+    color: white;
+    font-family: Lato;
+}
+
+.mediaLabel {
+    float: right;
+    padding-right: 10px;
+}
+
+.mediaInput {
+    padding-bottom: 20px;
 }
 
 .mode {
@@ -389,75 +413,33 @@ legend {
 
 .plus {
     font-size: 50px;
+    cursor: pointer;
 }
 
 .down {
   margin-top: 27px;
 }
 
-.btn-add {
-    margin: 10px 20px 0px 20px;
-    color: #FFFFFF;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-    background-color: #BBD982;
-    background-color: #BBD982;
-    background-image: -moz-linear-gradient(top, #B6D67A, #BBD982);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#B6D67A), to(#BBD982));
-    background-image: -webkit-linear-gradient(top, #B6D67A, #BBD982);
-    background-image: -o-linear-gradient(top, #B6D67A, #BBD982);
-    background-image: linear-gradient(to bottom, #B6D67A, #BBD982);
-    background-repeat: repeat-x;
-    border-color: #BBD982;
-    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#B6D67A', endColorstr='#BBD982', GradientType=0);
-    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
-}
-.btn-add:hover,
-.btn-add:active,
-.btn-add.active,
-.btn-add.disabled,
-.btn-add[disabled] {
-    color: #FFFFFF;
-    background-color: #BBD982;
-    *background-color: #003bb3;
-}
-
 .btn-room {
-    color: #FFFFFF;
-    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-    background-color: #BBD982;
-    background-color: #BBD982;
-    background-image: -moz-linear-gradient(top, #B6D67A, #BBD982);
-    background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#B6D67A), to(#BBD982));
-    background-image: -webkit-linear-gradient(top, #B6D67A, #BBD982);
-    background-image: -o-linear-gradient(top, #B6D67A, #BBD982);
-    background-image: linear-gradient(to bottom, #B6D67A, #BBD982);
-    background-repeat: repeat-x;
-    border-color: #BBD982;
-    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#B6D67A', endColorstr='#BBD982', GradientType=0);
-    filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
-}
-.btn-room:hover,
-.btn-room:active,
-.btn-room.active,
-.btn-room.disabled,
-.btn-room[disabled] {
-    color: #FFFFFF;
-    background-color: #BBD982;
-    *background-color: #003bb3;
+    -moz-box-shadow:inset 0px 0px 0px 0px #caefab;
+    -webkit-box-shadow:inset 0px 0px 0px 0px #caefab;
+    box-shadow:inset 0px 0px 0px 0px #caefab;
+    display:inline-block;
+    color: white;
+    font-family:Lato;
+    font-size:20px;
+    font-weight:bold;
+    padding:13px 30px;
+    text-decoration:none;
+    text-shadow:1px 1px 0px darkgray;
+}.btn-room:active {
+    position:relative;
+    top:1px;
 }
 
 @media only screen and ( max-width : 767px) {
     .btn-home {
         display:block;
         margin: 0px 35px 10px 35px;
-
-    }
-
-    .wide {
-        padding-left: 0px;
-        padding-right: 0px;
-        padding-top: 0px;
     }
 }
