code cleanup and refactoring

--- a/client/css/vidj.less
+++ b/client/css/vidj.less
@@ -223,7 +223,7 @@ html, body, .container, .page, .currRoom {
     padding-top: 11%;
     position:relative;
     padding-bottom: 18%;
-    background: url(bg.jpg) no-repeat center center fixed; 
+    background: url(/img/bg.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
