--- a/client/templates/enteredRoom.html
+++ b/client/templates/enteredRoom.html
@@ -46,7 +46,12 @@
                 {{/if}}
                 {{#each videoData}}
                 {{/each}}
+                <div>
+                  <div class="col-sm-6 "><a id="previous"><h5 class="plus"><</h5></a></div>
+                  <div class="col-sm-6 "><a id="nextVideo"><h5 class="plus">></h5></a></div>
+                </div>
               </div>
+             
           {{/isolate}}
       <div>
     {{/if}}
