--- a/client/css/vidj.less
+++ b/client/css/vidj.less
@@ -68,8 +68,7 @@ html, body, .container, .page, .currRoom {
 
     #playlist {
         overflow: scroll;
-        height: 100%;  
-        padding-bottom: 100px;
+        height: 79%;  
     }
 }
 
@@ -216,7 +215,25 @@ html, body, .container, .page, .currRoom {
     background: -moz-linear-gradient(top,#e1e1e1 0,#fff 30%,#fff 100%);
     background: -ms-linear-gradient(top,#e1e1e1 0,#fff 30%,#fff 100%);
     padding: 20px 30px;
-    height: 400px;
+    height: 100%;
+
+    .what {
+        margin: 20px 40%;
+        border-bottom: 5px solid;
+        border-top: 5px solid;
+        padding: 5px;
+        font-size:45px
+    }
+
+    .desc {
+        font-size: 25px;
+    }
+    .row {
+        margin: 0px;
+    }
+    .pod {
+        padding: 4% 2.5%;
+    }
 }
 
 .homepage {
@@ -229,7 +246,6 @@ html, body, .container, .page, .currRoom {
     -o-background-size: cover;
     background-size: cover;
     width: 100%;
-    height: 100%;
 
     .home-hero .btn {
         font-family: 'Lato', sans-serif;
@@ -278,7 +294,7 @@ html, body, .container, .page, .currRoom {
 }
 
 .videoPage {
-    margin-top: 3%;
+    margin-top: 3.5%;
     min-height: 310px;
     height: 100%;
 
