--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,30 +1,58 @@
 <template name="Home">
-  <div class="homepage col-sm-12 text-center">
-    <h1 class="large">Welcome to <span>Kikbak.tv</span></h1>
-    <br/>
-    <h3 class="tag">A place to make real-time playlists, with friends.</h3>
-    <div class="buttonsHome">
-      <a class="btn btn-sm btn-home purp-bg" href="/rooms">Browse</a>
-      <a class="btn btn-sm btn-home blue-bg" href="/rooms/find">Enter Private Room</a>
-      <a class="btn btn-sm btn-home green-bg" href="/rooms/new/add">Create</a>
-    </div>
-  </div>
-  <div class="about col-sm-12">
-    <div class="aboutContent">
-    <h2>KikBak.tv </h2>
-    <div class="row">
-      <div class="col-xs-6 col-md-3"><p>1. Make or enter a Kikbak </br>
-              Public - anyone anywhere can enter and edit the playlist </br>
-              Private - only people you give the room id to are allowed to contribute</p> </div>
-      <div class="col-xs-6 col-md-3"><p>2. Choose a mode </br>
-              Theater - view the playlist (main screen) </br>
-              submitter - quickly add media to the selected room</p> </div>
-      <div class="col-xs-6 col-md-3"><p>3. Submit videos to the playlist </p> </div>
-      <div class="col-xs-6 col-md-3"><p>4. Enjoy!</p> </div>
+  <div class="row">
+    <div class="homepage col-xs-12 text-center">
+      <h1 class="large">Welcome to <span>Kikbak.tv</span></h1>
+      <br/>
+      <h3 class="tag">A place to make real-time playlists, with friends.</h3>
+      <div class="buttonsHome">
+        <a class="btn btn-sm btn-home purp-bg" href="/rooms">Browse</a>
+        <a class="btn btn-sm btn-home blue-bg" href="/rooms/find">Find Private Theater</a>
+        <a class="btn btn-sm btn-home green-bg" href="/rooms/new/add">Create</a>
       </div>
     </div>
-  </div>
-  <div class="wrapper secondary footer col-sm-12 text-center">
-    <span>Copyright © 2013 Kikbak.tv</span><span>     |     </span><span><a href="/about" class="plain">About</a></span><span>  |  </span><span><a href="/contact" class="plain">Contact</a></span>
+    <div class="about col-xs-12">
+      <div class="aboutContent">
+        <div class="row">
+          <h1 class="text-center what">What is it?</h1>
+          <p class="text-center desc">Easily build a playlist with a group of people without having to fuss around with one device. With <span class="purp">kikbak</span>.<span class="blue">tv</span> you can create a playlist that you and your friends can all add to, at the same damn time.</p>
+          <div class="row col-md-6">
+            <div class="col-xs-12 col-sm-6 col-md-3 pod">
+              <div class="text-center"><img src="/img/Search-Find-256.png" style="height:140px;"></img></div>
+              <h2 class="text-center">Find or Create</h2>
+              <p style="font-size:20px;">
+                <span class="purp">Public</span> - anyone anywhere can enter and edit the playlist 
+                <span class="blue">Private</span> - only people you give the room id to are allowed to contribute
+              </p>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3 pod">
+              <div class="text-center"><img src="/img/Media-Player-256.png" style="height:140px;"></img></div>
+              <h2 class="text-center">Theater</h2>
+              <p style="font-size:20px;">
+                On a large screen, such as a TV or moniter, use this view to watch the playlist and view the upcoming videos.
+              </p>
+            </div>
+          </div>
+          <div class="row col-md-6">
+            <div class="col-xs-12 col-sm-6 col-md-3 pod">
+              <div class="text-center"><img src="/img/Specs-256.png" style="height:140px;"></img></div>
+              <h2 class="text-center">Editor</h2>
+              <p style="font-size:20px;">
+                Using anything with a browser, like a phone or tablet, quickly search for and add videos from YouTube to the playlist.
+              </p>
+            </div>
+            <div class="col-xs-12 col-sm-6 col-md-3 pod">
+              <div class="text-center"><img src="/img/Check-256.png" style="height:140px;"></img></div>
+              <h2 class="text-center">Enjoy</h2>
+              <p style="font-size:20px;">
+                Kickback, open a beer, light a spliff, and relax.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="wrapper secondary footer col-xs-12 text-center">
+      <span>Copyright © 2013 Kikbak.tv</span><span>     |     </span><span><a href="/about" class="plain">About</a></span><span>  |  </span><span><a href="/contact" class="plain">Contact</a></span>
+    </div>
   </div>
 </template>
