--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -1,4 +1,5 @@
 <template name="Home">
+  <img class="bg" src="img/bg.jpg" alt="">
   <div class="row">
     <div class="homepage col-xs-12 text-center">
       <h1 class="large">Welcome to <span>Kikbak.tv</span></h1>
@@ -9,6 +10,7 @@
         <a class="btn btn-sm btn-home blue-bg" href="/rooms/find">Find Private Theater</a>
         <a class="btn btn-sm btn-home green-bg" href="/rooms/new/add">Create</a>
       </div>
+      <div class="text-center"><img class="down" src="/img/arrow_down.png"></img></div>
     </div>
     <div class="about col-xs-12">
       <div class="aboutContent">
@@ -20,7 +22,7 @@
               <div class="text-center"><img src="/img/Search-Find-256.png" style="height:140px;"></img></div>
               <h2 class="text-center">Find or Create</h2>
               <p style="font-size:20px;">
-                <span class="purp">Public</span> - anyone anywhere can enter and edit the playlist 
+                <span class="purp">Public</span> - anyone anywhere can enter and edit the playlist</br>
                 <span class="blue">Private</span> - only people you give the room id to are allowed to contribute
               </p>
             </div>
