--- a/client/templates/createARoom.html
+++ b/client/templates/createARoom.html
@@ -1,18 +1,18 @@
 <template name="CreateARoom">
-  <div class="row-fluid">
-    <div class="alpha60 create">
-      <form class="form-horizontal">
+  <div class="row">
+    <div class="create">
+      <form class="form-horizontal Absolute-Center">
           <fieldset>
             <legend>Create a Room</legend>
-            <div class="form-group">
+            <div class="form-group row">
               <label for="name" class="control-label col-sm-2">Name:</label>
               <div class="col-sm-10">
                 <input type="text" id="name" class="form-control" name="name" placeholder="eg(Kickback Supreme)"/>
               </div>
             </div>
-            <div class="form-group">
-              <label for="isPrivate" class="control-label col-sm-2">Private Room?:</label>
-              <div class="col-sm-10">
+            <div class="form-group row">
+              <label for="isPrivate" class="control-label col-xs-2">Private Room?:</label>
+              <div class="col-xs-10 check">
                 <input type="checkbox" id="isPrivate" name="isPrivate" />
               </div>
             </div>
@@ -22,13 +22,6 @@
             </div>
           </fieldset>
       </form>
-    </div>
-  </div>
-  <div class="row-fluid status-bar">
-    <div>
-      <div class="alert alert-success" style="display: none">
-        <b>Success!</b> Wine saved successfully
-      </div>
     </div>
   </div>
 </template>
