--- a/client/templates/createARoom.html
+++ b/client/templates/createARoom.html
@@ -1,7 +1,7 @@
 <template name="CreateARoom">
-  <div class="row">
+  <div class="row" style="max-width:100%;">
     <div class="create">
-      <form class="form-horizontal Absolute-Center">
+      <form class="form-horizontal Absolute-Center borderG">
           <fieldset>
             <legend>Create a Room</legend>
             <div class="form-group row">
