--- a/client/templates/findRoom.html
+++ b/client/templates/findRoom.html
@@ -1,7 +1,7 @@
 <template name="FindRoom">
-  <div class="row-fluid">
+  <div class="row" style="max-width:100%;">
     <div class="create">
-        <form class="form-horizontal Absolute-Center" style="padding: 60px 20px;">
+        <form class="form-horizontal Absolute-Center borderB" style="padding: 60px 20px;">
           <fieldset>
             <legend>Find a Private Room</legend>
             <div id="error">No Room with that ID</div>
