--- a/client/templates/chooseModeScreen.html
+++ b/client/templates/chooseModeScreen.html
@@ -1,9 +1,9 @@
 <template name="ChooseModeScreen">
-  <div class="row-fluid">
-    <div class="alpha60 text-center">
+  <div class="row create" style="max-width:100%;">
+    <div class="Absolute-Center text-center borderP borderGR">
       <legend>Choose Mode</legend>
-      <a href="/rooms/{{room.urlId}}" class="theater mode thumbnail btn-room btn-sm blue-bg" style="text-align: center;margin:25px 30%;">Theater</a>
-      <a href="/rooms/{{room.urlId}}/addVideo" class="submitter mode thumbnail btn-room btn-sm purp-bg" style="text-align: center;margin:25px 30%;">Submitter View</a>
+      <a href="/rooms/{{room.urlId}}" class="theater mode thumbnail btn-room btn-sm blue-bg" style="text-align: center;margin:25px 15%;">Theater</a>
+      <a href="/rooms/{{room.urlId}}/addVideo" class="submitter mode thumbnail btn-room btn-sm purp-bg" style="text-align: center;margin:25px 15%;">Editor</a>
     </div>
   </div>
 </template>
