--- a/client/css/vidj.less
+++ b/client/css/vidj.less
@@ -1,5 +1,6 @@
 @import "/packages/bootstrap3-less/bootstrap.lessimport";
 @blue: #7AB6D6;
+@darkblue: #3788b3;
 @purple: #D67AB6;
 @green: #BBD982;
 
@@ -58,6 +59,8 @@ html, body, .container, .page, .currRoom {
         padding-bottom: 100px;
     }
 }
+
+
 
 .playlist-container {
     float: right;
@@ -188,7 +191,7 @@ html, body, .container, .page, .currRoom {
 
 .blue-bg {
     background-color: @blue;
-    margin: 0px 25px;
+    margin: 0px 5%;
 }
 
 .purp {
@@ -376,14 +379,34 @@ img.bg {
     .addModule {
         margin-top: 20px;
         padding: 0px 5%;
+        height: 100%;
+
+        #results {
+            height: 100%;
+            overflow-y: scroll;
+            overflow-x: hidden;
+            padding-bottom: 160px;
+
+            .choose {
+                padding-left: 15px;
+            }
+        }
     }
 
     .borderG {
         border-left: 10px solid @green; 
     }
 
+    .borderGR {
+        border-right: 10px solid @green; 
+    }
+
     .borderB {
         border-left: 10px solid @blue; 
+    }
+
+    .borderP {
+        border-left: 10px solid @purple; 
     }
 
     a {
@@ -415,9 +438,36 @@ img.bg {
         padding: 50px 30px;
     }
 
+    .Absolute-Center-Add {
+        display: block !important;
+        min-width: 20%;
+        max-width: 90%;
+        min-height: 315px;
+        max-height: 90%;
+        resize: both;
+
+        height: 85%;
+        width: 90%;
+        margin: auto;
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+
+        background-color: #222222;
+        padding: 5px 30px;
+        overflow: hidden;
+
+        h2 {
+            color: white;
+        }
+    }
+
     @media (max-width: 1086px) {
       .Absolute-Center {
         width: 80%;
+        overflow: scroll;
       }
     }
 
@@ -534,7 +584,7 @@ legend {
 }
 
 .rooms {
-    padding: 10% 5%;
+    padding: 7% 5%;
 
     h2 {
         color: white;
@@ -542,19 +592,37 @@ legend {
     
     .rooms-container {
         padding: 0px 5%;
+        overflow: auto;
         background-color: #222222;
         min-height: 80%; 
-        border-left: 10px solid @purple;  
+        border-left: 10px solid @purple;
+        padding-bottom: 30px;  
     }
 
-    @media (min-width: 767px) {
+    .buttons {
+        margin-left: -6%;
+        padding-right: 17%;
+    }
+
+    @media screen and (min-width: 767px) {
       .buttons {
-        margin-left: -60px;
+        margin-left: -10%;
+        padding-right: 0px;
       }
     }
 }
 
+@media screen and (max-width: 860px) {
+    .rooms {
+        padding: 11% 5%;
+    }      
+}
 
+@media screen and (max-width: 470px) {
+    .rooms {
+        padding: 19% 5%;
+    }      
+}
 
 .down {
   margin-top: 27px;
@@ -562,25 +630,17 @@ legend {
 }
 
 .btn-room {
-    display:inline-block;
-
-    color: white;
-    font-family:Lato;
-    font-size:20px;
-    font-weight:bold;
-    text-decoration:none;
-    text-shadow:1px 1px 0px darkgray;
-
-    border-bottom:3px solid #4aa89f;
-    background-color:#88d8d0;
+    border-bottom:3px solid @darkblue;
+    background-color: @blue;
     padding:10px;
     color:#fff;
-    font-weight:600;
     cursor:pointer;
     position:relative;
     margin-top: 10px;
     margin-bottom: 10px;
+    overflow-x: hidden;
 }
+
 /*.btn-room:hover {
     top:-5px;
     margin-bottom: -5px;
