--- a/client/templates/home.html
+++ b/client/templates/home.html
@@ -2,7 +2,7 @@
   <img class="bg" src="img/bg.jpg" alt="">
   <div class="row">
     <div class="homepage col-xs-12 text-center">
-      <h1 class="large">Welcome to <span>Kikbak.tv</span>{{local}}</h1>
+      <h1 class="large">Welcome to <span>Kikbak.tv</span></h1>
       <br/>
       <h3 class="tag">A place to make real-time playlists, with friends.</h3>
       <div class="buttonsHome">
