--- a/client/templates/addVideoScreen.html
+++ b/client/templates/addVideoScreen.html
@@ -2,7 +2,7 @@
   <div class="row-fluid">
     <div class="create">
       <div class="form-horizontal row Absolute-Center-Add">
-        <div class="text-center col-sm-5 text-center">
+        <div class="playlist-container text-center col-sm-5 text-center">
           <h2>Current Playlist:</h2>
           <div id="playlist">
             {{#if videoData}}
@@ -42,7 +42,7 @@
                 </div>
                 <div class="success"></div>
               {{else}}
-                <form class="form-horizontal" style="height:100%;">
+                <form class="form-horizontal" style="height:75%;">
                   <div class="input-group">
                     <input type="text" class="form-control" id="searchTerms">
                     <span class="input-group-btn">
