--- a/client/templates/browseRooms.html
+++ b/client/templates/browseRooms.html
@@ -1,11 +1,15 @@
 <template name="BrowseRooms">
+  <img class="bg" src="img/purpback.jpg" alt="">
   {{#if loading}}
     <div id="rooms">Loading...</div>
   {{else}}
     <div class="page row text-center rooms" style="max-width: 100%;">
       <div class="rooms-container">
-        <h2>Public Rooms:</h2>
-        <div class="buttons">
+        <h2>Search for a Room<h2>
+        
+
+<!--         <h3>Public Rooms:</h3>
+ -->        <div class="buttons">
           {{#each rooms}}
             <a href="/rooms/{{urlId}}/mode" class="btn btn-sm btn-home btn-room col-md-2 col-sm-5 col-sm-offset-1 col-xs-12" style="text-align: center;font-size:25px;">
               {{name}}
