--- a/client/templates/findRoom.html
+++ b/client/templates/findRoom.html
@@ -1,4 +1,5 @@
 <template name="FindRoom">
+  <img class="bg" src="/img/back.jpg" alt="">
   <div class="row" style="max-width:100%;">
     <div class="create">
         <form class="form-horizontal Absolute-Center borderB" style="padding: 60px 20px;">
