--- a/client/templates/addVideoScreen.html
+++ b/client/templates/addVideoScreen.html
@@ -1,7 +1,7 @@
 <template name="AddVideoScreen">
   <div class="row-fluid">
     <div class="create">
-      <div class="form-horizontal row Absolute-Center-Add">
+      <div class="form-horizontal row Absolute-Center-Add" style="border-left:10px solid #BBD982;border-right:10px solid #BBD982">
         <div class="playlist-container text-center col-sm-5 text-center">
           <h2>Current Playlist:</h2>
           <div id="playlist">
