--- a/client/templates/browseRooms.html
+++ b/client/templates/browseRooms.html
@@ -1,6 +1,6 @@
 <template name="BrowseRooms">
-  <img class="bg" src="img/purpback.jpg" alt="">
-  {{#if loading}}
+<!--   <img class="bg" src="img/purpback.jpg" alt="">
+ -->  {{#if loading}}
     <div id="rooms">Loading...</div>
   {{else}}
     <div class="page row text-center rooms" style="max-width: 100%;">
