--- a/client/templates/createARoom.html
+++ b/client/templates/createARoom.html
@@ -1,8 +1,8 @@
 <template name="CreateARoom">
-  <img class="bg" src="/img/greenback.jpg" alt="">
-  <div class="row" style="max-width:100%;">
+<!--   <img class="bg" src="/img/greenback.jpg" alt="">
+ -->  <div class="row" style="max-width:100%;">
     <div class="create">
-      <form class="form-horizontal Absolute-Center borderG" style="overflow:hidden">
+      <form class="form-horizontal Absolute-Center borderG">
           <fieldset>
             <legend>Create a Room</legend>
             <div class="form-group row">
